# folktime

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
src/: duration.rs  lib.rs
src/duration/: compact.rs  detailed.rs  mini.rs  mod.rs  one_unit_frac.rs  one_unit_mini.rs  one_unit_whole.rs  two_units_whole.rs  whole.rs
tests/: compact.rs  detailed.rs  format.rs  min_unit.rs  mini.rs  no_alloc.rs  one_unit_frac.rs  one_unit_whole.rs  style_migration.rs  two_units_whole.rs
tests/common/: mod.rs
